# scrapbox6

./: README.md
docker_sample/: README.md
docker_sample/container-connection/: README.md  compose.yml
docker_sample/docker-compose-directory/: Dockerfile  README.md  compose.yml
docker_sample/splade-docker/: .gitignore  Dockerfile  README.md
docker_sample/storage-control/: Dockerfile  README.md  compose.volume.mount.yml  compose.yml
docker_sample/use-nvidia-docker-gpu/: README.md
docker_sample/use-torch-docker/: Dockerfile  README.md  compose.yml
docker_sample/use_compose_yaml/: Dockerfile  README.md  compose.yaml
game_sample/: README.md
game_sample/sample_game/: control.gd  control.tscn  icon.svg.import  project.godot
hs_sample/: README.md
hs_sample/first-step/: CHANGELOG.md  README.md  first-step.cabal  package.yaml
ir_sample/opensearch-vector-search/: README.md  docker-compose.yml  main.py
ir_sample/qdrant-cos-sim-vs-dot/: README.md  client.py  loader.py  main.py  normalizer.py  vectorizer.py
ir_sample/qdrant-delete-behavior-check/: README.md  client.py  delete.py  delete_points.py  docker-compose.yml  loader.py  main.py  utils.py  vectorizer.py
ir_sample/qdrant-filter-matchany-vs-should/: client.py  condition.py  generate.py  main.py  utils.py
java_sample/: README.md
kt_sample/: README.md
math_sample/: README.md
nlp_sample/: README.md
py_sample/poetry-cli-option/: Dockerfile  README.md  docker-compose.custom.yml  docker-compose.yml  pyproject.toml
py_sample/poetry-cli-option/poetry_cli_option/: main.py
tf_sample/: README.md
(+715 files in other folders)
