[tool.poetry]
name = "poetry-cli-option"
version = "0.1.0"
description = ""
authors = ["wararaki <ky7.ott.w@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_cli_option"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cliapp = "poetry_cli_option.main:batch"
